# ocr_nunalleq

./: .gitignore  LICENSE  MANIFEST.in  README.md  SETUP.md  launch_web.bat  launch_web.sh  ocr.py  pyproject.toml  test_detailed_ocr.py  test_digit_boxes.py  test_digits_only.py  test_simple_ocr.py  test_spatial_ocr.py
examples/: usage_example.py
src/nunalleq_ocr/: __init__.py  __main__.py  cli.py  detector.py  gui.py  renamer.py
src/nunalleq_ocr/webapp/: app.py
src/nunalleq_ocr/webapp/static/css/: style.css
src/nunalleq_ocr/webapp/static/js/: app.js
src/nunalleq_ocr/webapp/templates/: index.html
tests/: __init__.py  test_detector.py  test_renamer.py
